# meandmyshadow.web

./: .cproject  .project  CMakeLists.txt  Controls.txt  README.md  ThemeDescription.txt  build.sh  mams.html  mams.js  mams.wasm  meandmyshadow.desktop  pre.js
cmake/Modules/: FindSDL_gfx.cmake
data/font/: License
data/levelpacks/classic/: Control.map  Credits.map  levels.lst
data/levelpacks/default/: 1.map  2.map  3.map  4.map  5.map  QuickSwap.map  Regroup.map  Remote.map  Skyscrapers.map  Sweeper.map  Switches.map  Timing.map  Towers.map  Volcano.map  levels.lst  map01.map  map02.map  map03.map  map04.map  map05.map
data/levelpacks/tutorial/: levels.lst  tut01.map  tut02.map  tut05.map  tut06.map  tut07.map  tut08.map  tut09.map  tut10.map  tut14.map  tut15.map  tut16.map  tut18.map  tut19.map  tut20.map  tut22.map  tut23.map
data/music/: default.list  menu.music
data/sfx/: Credits.txt
data/themes/Cloudscape/: License  theme.mnmstheme
data/themes/classic/: theme.mnmstheme
data/themes/classic/blocks/: Credits.txt
icons/windows-icon/: res.rc
libarchive/contrib/: libarchive.1aix53.spec  libarchive.spec
src/: Addons.cpp  Addons.h  Block.cpp  Block.h  FileManager.cpp  FileManager.h  Functions.cpp  Functions.h  GUIListBox.cpp  GUIListBox.h  GUIObject.cpp  GUIObject.h  GUIScrollBar.cpp  GUIScrollBar.h  GUITextArea.cpp  GUITextArea.h  Game.cpp  Game.h  GameObjects.cpp  GameObjects.h  GameState.h  Globals.cpp  Globals.h  ITreeSerializer.h  ITreeStorage.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  LevelEditSelect.cpp  LevelEditSelect.h  LevelEditor.cpp  LevelEditor.h  LevelPlaySelect.cpp  LevelPlaySelect.h  LevelSelect.cpp  LevelSelect.h  Levels.cpp  Levels.h  MD5.cpp  (+23 more)
src/media/: playbutton.xcf
